@startuml

title __ASSIGNMENT TWO's Class Diagram__\n

  package  {
    class Car {
    }
  }
  

  package  {
    class CarListTab {
    }
  }
  

  package  {
    class CarListTabController {
    }
  }
  

  package  {
    class CarTab {
    }
  }
  

  package  {
    class CarTabController {
    }
  }
  

  package  {
    class main {
    }
  }
  

  Car -up-|> Serializable
  Car -up-|> Comparable
  CarListTab -up-|> Tab
  CarListTab o-- CarListTabController : carListTabController
  CarListTabController o-- CarListTab : carListTab
  CarTab -up-|> Tab
  CarTab o-- CarTabController : carTabController
  CarTabController o-- CarListTab : carListTab
  CarTabController o-- CarTab : carTab
  main -up-|> Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
